Fix about section mobile css

--- a/zenctuary-theme-starter/assets/css/components.css
+++ b/zenctuary-theme-starter/assets/css/components.css
@@ -762,4 +762,8 @@ input[type="checkbox"] {
     min-width: 100%;
   }
 
+  .wp-block-column.is-vertically-aligned-center.zen-about-section.is-layout-flow.wp-block-column-is-layout-flow {
+    padding: var(--zen-space-50) !important;
+  }
+
 }
